--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
+body {
+  background: rgb(255,247,250);
+  background: radial-gradient(circle, rgba(255,247,250,1) 0%, rgba(56,102,58,1) 100%);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+}
+
+#root {
+  min-height: 100vh;
+  margin: 0 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
